# tools_ngs

./: LICENSE  README.md  pyproject.toml
src/lib_cmd/: cmd.py
tools_sunxin/: CpG_find(UNFINISHED).py  bak_pipeline.py  bamtofastq.py  count_tree.py  fa2AA.py  filemaker_qr_label.py  gen_fa.py  gen_fa_loci_gphocs.py  gen_loci_window.py  gen_window_philip.py  get_loci_gphocs.py  gsi.py  lib_Simple_Map_Reduce.py  lib_cmd.py  lib_dbSNP.py  lib_fastaq.py  lib_file.py  lib_p_dis.py  lib_pipeline.py  lib_sam_file.py  lib_sam_line.py  lib_split_file.py  lib_vcf_explore.py  log_run  map_stat.py  p_dis_mp.py  pair_align.py  pair_align_mp.py  pipeline_main.py  plot_explore.R  qpGraph_gen.py  sam_main.py  snp_annotation.py  sort_vcf_ref.py  vcf2afs.py  vcf2eigenstrat.py  vcf2eigenstrat_simple.py  vcf2fa.py  vcf2phylip.py  vcf_filter.py  (+8 more)
tools_sunxin/R_script_sunxin/: plot_len_dk.R
